<resources>
    <string name="app_name">Lifruk</string>
    <string name="front">FRONT</string>
    <string name="back">BACK</string>
    <string name="front_text">FRONT TEXT</string>
    <string name="back_text">BACK TEXT</string>
    <string name="connection">Connection</string>
    <string name="flash_card">FLASHCARD</string>
    <string name="quiz">QUIZ</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="color">Color</string>
    <string name="english">English</string>
    <string name="change_language">Change Language</string>
    <string name="change_level">Change Level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="Difficult">Difficult</string>
    <string name="player">Player</string>
    <string name="french">French</string>
    <string name="lithaunian">Lithuanian</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="confirm_password">confirm password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="native_language">Native language</string>
    <string name="learning_language">Learning language</string>
    <string name="learning">Learning</string>
    <string name="nativee">Native</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="menu">Menu</string>
    <string name="score">Your Score</string>

    <string name="next">NEXT</string>

    <string name="summit" translatable="false">Summit</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="pink">pink</string>
    <string name="orange">orange</string>
    <string name="yellow">yellow</string>
    <string name="brown">brown</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="add_topic" translatable="false">Add topic</string>
    <string name="settings">Settings</string>

    <!--Preference-->
    <string name="parameterKey" translatable="false">parametersKey</string>
    <string name="settingsTitle">Settings</string>
    <string name="nativeL">Native language</string>
    <string name="learningL">Learning language</string>
    <string name="nativeLKey" translatable="false">nativeL</string>
    <string name="learningLKey" translatable="false">learningL</string>
    <string name="learningLSummary">Which language do you want to learn?</string>
    <string-array name="listL">
        <item>"English"</item>
        <item>"Lithuanian"</item>
        <item>"Ukrainian"</item>
        <item>"French"</item>
    </string-array>
    <string-array name="listLAlias">
        <item>"E"</item>
        <item>"L"</item>
        <item>"U"</item>
        <item>"F"</item>
    </string-array>

    <string name="dlevel" translatable="false">Difficulty level</string>
    <string name="dlevelKey" translatable="false">dlevel</string>
    <string name="word_to_guess">Word to guess</string>
    <string name="animal">Animal</string>
    <string name="food">Food</string>

    <string name="apple">apple</string>
    <string name="broccoli">broccoli</string>
    <string name="pizza">pizza</string>
    <string name="pear">pear</string>
    <string name="meat">meat</string>
    <string name="chicken">chicken</string>
    <string name="horse">horse</string>
    <string name="cow">cow</string>
    <string name="rabbit">rabbit</string>
    <string name="goat">goat</string>
    <string name="deconnection">Deconnection</string>
    <string-array name="level">
        <item>"Easy"</item>
        <item>"Medium"</item>
        <item>"Hard"</item>
    </string-array>
    <string-array name="levelAlias">
        <item>"E"</item>
        <item>"M"</item>
        <item>"H"</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errLanguageSelection">Please select 2 differents languages!</string>
    <string name="errPasswordDontMatch">Passwords don\'t match!</string>
    <string name="errEmailInvalidFormat">Invalid email format!</string>
    <string name="errUsernameIsEmpty">Username must not be empty!</string>
    <string name="errPasswordEmpty">Password must not be empty!</string>
    <string name="errLoginFailed">Login failed! Check credentials</string>
    <string name="errSignupFailed">SignIn Failed! User not registered</string>
    <string name="add_word" translatable="false" />
    <string name="eword" translatable="false" />
    <string name="en_pronounciation" translatable="false" />
    <string name="lword" translatable="false" />
    <string name="l_pronounciation" translatable="false" />
    <string name="uk_pronounciation" translatable="false" />
    <string name="fr_pronounciation" translatable="false" />
    <string name="new_word_lithuanian">New word (Lithuanian)</string>
    <string name="pictureadd" translatable="false" />


</resources>