<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connection.SignUpFragment"
    android:id="@+id/fenetre4"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
        app:startIconContentDescription="Username"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/username">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:id="@+id/signup_username"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:startIconContentDescription="email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"
            android:id="@+id/signup_email"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconContentDescription="Password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:id="@+id/signup_pwd"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconContentDescription="confirm password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/confirm_password">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:id="@+id/signup_conf_pwd"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/native_language"
        android:layout_gravity="left"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:textSize="22dp" />

    <Spinner
            android:id="@+id/signin_listLanguageN"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border"
            android:spinnerMode="dropdown" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/learning_language"
        android:layout_gravity="left"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:textSize="22dp" />

    <Spinner
            android:id="@+id/signin_listLanguageL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border"
            android:spinnerMode="dropdown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="22dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#FF1493"
        android:id="@+id/signup_validate"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="12dp"
        android:backgroundTint="#75346E"
        android:id="@+id/signup_go_login"/>

</LinearLayout>