<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFF8DC">

    <ImageView
        android:id="@+id/player_icon"
        android:layout_width="190dp"
        android:layout_height="188dp"
        android:contentDescription="Picture"
        android:src="@drawable/icon_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/player_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nativee"
        android:textColor="#210B25"
        app:layout_constraintBottom_toTopOf="@+id/player_native_language"
        app:layout_constraintEnd_toEndOf="@+id/player_native_language"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/player_native_language"
        app:layout_constraintTop_toBottomOf="@+id/player_icon"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player_native_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="French"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learning"
        android:textColor="#210B25"
        app:layout_constraintBottom_toTopOf="@+id/player_language_to_learn"
        app:layout_constraintEnd_toEndOf="@+id/player_language_to_learn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/player_language_to_learn"
        app:layout_constraintTop_toBottomOf="@+id/player_icon"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player_language_to_learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="English"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player_username"
        app:layout_constraintTop_toBottomOf="@+id/player_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>

